# git-raf

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
.raf/: config.toml
scripts/: git-raf.sh  tag.sh
src/git_raf/: __init__.py  audit.py  cli.py  config.py  crypto.py  git_ops.py  governance.py  hooks.py  policy.py  sinphase.py  versioning.py
tests/: conftest.py  test_cli.py  test_config.py  test_crypto.py  test_governance.py  test_hooks.py  test_policy.py  test_sinphase.py  test_versioning.py
