[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "git-raf"
version = "0.1.0"
description = "Git Regulation As Firmware - governance-integrated version control"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Nnamdi Michael Okpala", email = "nnamdi@obinexus.com" },
]
keywords = ["git", "governance", "firmware", "cryptography", "raf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "cryptography>=41.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
git-raf = "git_raf.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/git_raf"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
